<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ass2</string>
    <string name="action_settings">Settings</string>
    <string name="mycountries_app_name">Visited Countries</string>
    <string name="mycountries_app_name_form">Visited Countries Form</string>
    <string name="mycountries_app_name_settings">MyCountries Settings</string>
    <string name="mycountries_date_alert">Input for the date has to be four numbers (e.g. 2013)</string>
    <string name="mycountries_name_alert">Input for the country name has to be letters only and less then 20 characters</string>
    <string name="mycountries_name">Enter name of the visited country:</string>
    <string name="mycountries_date">Enter the date of the visit:</string>
    <string name="mycountries_name_hint">e.g. Austria</string>
    <string name="mycountries_date_hint">e.g. 2013</string>
    <string name="mycountries_action_add">Add country</string>
    <string name="mycountries_action_sortcountry">Sort by country</string>
    <string name="mycountries_action_sortyear">Sort by year</string>
    <string name="mycountries_action_settings">Settings</string>
    <string name="mycountries_action">Options</string>
    <string name="pref_mycountries_title">MyCountries Settings</string>
    <string name="pref_mycountries_summary">Settings for the MyCountries App</string>
    <string name="pref_mycountries_sort_title">Ascending Sort Order</string>
    <string name="pref_mycountries_sort_key">ascOrder</string>
    <string name="pref_mycountries_sort_summary_on">Check it off for descending sorting</string>
    <string name="pref_mycountries_sort_summary_off">Check it on for ascending sorting</string>
    <string name="pref_mycountries_background_key">backGroundList</string>
    <string name="pref_mycountries_background_title">Background Color</string>
    <string name="pref_mycountries_background_summary">Define background color</string>
    <string name="pref_mycountries_fontsize_key">fontSize</string>
    <string name="pref_mycountries_fontsize_title">Text Font Size</string>
    <string name="pref_mycountries_fontsize_summary">Define the font size of the text</string>
    <string name="music_nosd">No SD card detected, please insert one to retrieve music</string>
    <string name="music_app_name">Music Player</string>
    <string name="music_app_name_service">MusicService</string>
    <string name="music_toast_retrieved">Finished retrieving music</string>
    <string name="music_notif_text">Click to get to the music player</string>
    <string name="music_notif_click">Click!</string>
    <string name="music_notif_ticker">Music player started!</string>
    <string name="music_service_stop">Music Service stopped!</string>
    <string name="music_layout_play">Play/Pause</string>
    <string name="music_layout_back">Back</string>
    <string name="music_layout_forward">Forw.</string>
    <string name="alarm_time">Current Time:</string>
    <string name="alarm_toast_set">Alarm set for: </string>
    <string name="alarm_toast_goneoff">The one-shot alarm has gone off</string>
    <string name="alarm_nextalarm">Next Alarms:</string>
    <string name="alarm_setalarm_one">Set as one-shot alarm</string>
    <string name="alarm_setalarm_repeat">Set as repeated alarm</string>
    <string name="alarm_setnewalarm">Set new alarm:</string>
    <string name="alarm_app_name">Alarm Clock</string>
    <string name="alarm_app_name_form">Alarm Clock Form</string>
    <string name="alarm_app_name_receiver">Alarm Receiver</string>
    <string name="alarm_broadcast">at.lnu.ass2.ALARM_BROADCAST</string>
    <string name="alarm_app_name_result">Alarm Result</string>
    <string name="alarm_result_nullalarm">Couldnt snooze, Sorry! Try to create another alarm</string>
    <string name="alarm_result_text">Alarm went off!</string>
    <string name="alarm_result_stop_button">Stop Alarm</string>
    <string name="alarm_result_snooze_button">Snooze 5 minutes</string>

</resources>